switch to prod server
